[project]
name = "transformer_from_scratch"
version = "0.0.4"
description = "Built a LLM transformer from scratch."
authors = [
	{ name = "Abigail Douglas", email = "abigail_douglas@mines.edu" },
]
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
  "torch",
  "numpy",
  "requests",
	"pytest",
  "matplotlib",
  "jaxtyping",
	"jupyter",
  "ipykernel",
] 

[dependency-groups]
dev = [
	# test
	"pytest>=8.2.2",
	# coverage
	"pytest-cov>=4.1.0",
	"coverage-badge>=1.1.0",
	# type checking
	"mypy>=1.0.1",
	# docs
	'pdoc>=14.6.0',
	# tomli since no tomlib in python < 3.11
	"tomli>=2.1.0; python_version < '3.11'",
]
lint = [
	# lint
	"pycln>=2.1.3",
	"ruff>=0.4.8",
]

[tool.uv]
default-groups = ["dev", "lint"]

[project.urls]
Homepage = "https://github.com/abigail-c-douglas/Transformer-from-Scratch"
Documentation = "https://github.com/abigail-c-douglas/Transformer-from-Scratch"
Repository = "https://github.com/abigail-c-douglas/Transformer-from-Scratch"
Issues = "https://github.com/abigail-c-douglas/Transformer-from-Scratch/issues"

# ruff config
[tool.ruff]
exclude = ["__pycache__"]

[tool.ruff.format]
indent-style = "tab"
skip-magic-trailing-comma = false

# Custom export configurations
[tool.uv-exports]
args = [
	"--no-hashes"
]
